# 1ai-reach

./: .env.example  .gitignore  1ai-reach-api.service  AUDIT_INDEX.md  AUDIT_REPORT.md  BACKEND_DATA_MAPPING.md  BUGFIX_REPORT.md  CLAUDE.md  DEPLOYMENT.md  FIX_PROPOSALS.md  INTEGRATION_TEST_REPORT.md  ORCHESTRATION_COMPLETE.md  QUICK_FIX_GUIDE.md  README.md  SKILL.md  agent_control.py  audit_system.py  capi_config.json  changes.diff  conv_detail.md  conv_expanded.md  conversations_tab.md  create.json  current_changes.diff  debug_body.py  debug_dep.py  debug_sig.py  deploy_fixes.sh  draft_save_result.md  draft_tab.md  ecosystem.config.js  fix_api.py  fix_autonomous.py  fix_indentation.py  full_page.yml  funnel_data.md  funnel_tab.md  get.json  kanban_card.md  kanban_cs.md  (+34 more)
.github/workflows/: ci.yml
.next/: trace  trace-build
dashboard/: next.config.ts  package-lock.json  package.json  playwright.config.ts
dashboard/playwright-report/: index.html
data/: leads.db-shm  leads.db-wal  sample_kb.txt
data/ab_tests/: test_20260428_152120.json  test_20260428_155134.json  test_20260428_155628.json  test_20260428_155920.json
data/compliance/: audit_log.json  bounces.json  consents.json  do_not_contact.json  suppression_list.json
docs/: DEPLOYMENT.md  DOCUMENTATION_STRUCTURE.md  README.md  mcp-contract.md  mcp-safety.md  migration_guide.md  runbooks.md
oneai_engage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: audio_utils.py  autonomous_loop.py  blaster.py  brain_client.py  capi_tracker.py  closer_agent.py  config.py  conversation_cleanup.py  conversation_guard.py  conversation_tracker.py  converter.py  cs_analytics.py  cs_engine.py  cs_learn.py  cs_learn_cli.py  cs_outcomes.py  cs_playbook.py  cs_self_improve.py  enricher.py  flosia_sales_engine.py  followup.py  generator.py  gmaps_client.py  guard_checker.py  health_monitor.py  kb_import_export.py  kb_manager.py  leads.py  llm_client.py  migrate_csv_to_sqlite.py  n8n_client.py  orchestrator.py  reply_tracker.py  researcher.py  reviewer.py  scraper.py  senders.py  setup_systemd.sh  sheets_sync.py  start_all.sh  (+12 more)
systemd/: 1ai-reach-api.service  1ai-reach-autonomous.service  1ai-reach-dashboard.service  1ai-reach-mcp.service  1ai-reach-ui.service  1ai-reach-watchdog.service
tests/: conftest.py  test_admin_feedback.py  test_cs_playbook.py  test_e2e_auto_learn.py
ui/: app.py
(+290 files in other folders)
