[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oneai-reach"
version = "0.1.0"
description = "Agent-controllable outreach backend and MCP server for BerkahKarya 1ai-reach"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.6.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pandas>=2.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "Pillow>=10.0.0",
  "PyYAML>=6.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "starlette>=0.27.0",
  "email-validator>=2.0",
  "weasyprint>=68.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23.0",
  "pytest-playwright>=0.4.0",
]

[project.scripts]
engage-mcp = "mcp_server:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:scripts/cs_outcomes.py is deprecated:DeprecationWarning",
    "ignore:scripts/cs_self_improve.py is deprecated:DeprecationWarning",
]
